--- a/addons/sourcemod/configs/weapons/weapons_brazilian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_brazilian.cfg
@@ -35,7 +35,7 @@
 		"index"		"1097"
 		"classes"	"weapon_m4a1;"
 	}
-	"Guerrilha"
+	"Guerrilheira"
 	{
 		"index"		"1096"
 		"classes"	"weapon_mp7;"
@@ -200,12 +200,12 @@
 		"index"		"1080"
 		"classes"	"weapon_negev;"
 	}
-	"Pneus de Pista"
+	"Pneu Vermelho"
 	{
 		"index"		"1079"
 		"classes"	"weapon_glock;"
 	}
-	"Banda de Rodagem"
+	"Pneu Azul"
 	{
 		"index"		"1078"
 		"classes"	"weapon_xm1014;"
@@ -1630,7 +1630,7 @@
 		"index"		"728"
 		"classes"	"weapon_mp7;"
 	}
-	"Lírio da Meia-Noite"
+	"Lírio da Meia-noite"
 	{
 		"index"		"727"
 		"classes"	"weapon_aug;"
@@ -3100,7 +3100,7 @@
 		"index"		"469"
 		"classes"	"weapon_deagle;"
 	}
-	"Tempestade da Meia-Noite"
+	"Tempestade da Meia-noite"
 	{
 		"index"		"468"
 		"classes"	"weapon_deagle;"
