--- a/addons/sourcemod/configs/weapons/weapons_bulgarian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_bulgarian.cfg
@@ -1380,7 +1380,7 @@
 		"index"		"809"
 		"classes"	"weapon_nova;"
 	}
-	"Оксиден блясък"
+	"Оксидно лумване"
 	{
 		"index"		"808"
 		"classes"	"weapon_glock;"
@@ -1740,7 +1740,7 @@
 		"index"		"707"
 		"classes"	"weapon_ak47;"
 	}
-	"Оксиден блясък"
+	"Оксидно лумване"
 	{
 		"index"		"706"
 		"classes"	"weapon_xm1014;"
@@ -2050,7 +2050,7 @@
 		"index"		"646"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Оксиден блясък"
+	"Оксидно лумване"
 	{
 		"index"		"645"
 		"classes"	"weapon_deagle;"
@@ -4395,7 +4395,7 @@
 		"index"		"203"
 		"classes"	"weapon_bizon;"
 	}
-	"DDPAT джунгла"
+	"Джунглова разпокъсана цифрова шарка"
 	{
 		"index"		"202"
 		"classes"	"weapon_m249;"
@@ -4570,7 +4570,7 @@
 		"index"		"167"
 		"classes"	"weapon_m4a1;"
 	}
-	"Оранжев блясък"
+	"Оранжево лумване"
 	{
 		"index"		"166"
 		"classes"	"weapon_xm1014;weapon_nova;"
@@ -4755,12 +4755,12 @@
 		"index"		"90"
 		"classes"	"weapon_deagle;weapon_ump45;"
 	}
-	"Розова DDPAT"
+	"Розова разпокъсана цифрова шарка"
 	{
 		"index"		"84"
 		"classes"	"weapon_glock;weapon_awp;"
 	}
-	"Оранжева DDPAT"
+	"Оранжева разпокъсана цифрова шарка"
 	{
 		"index"		"83"
 		"classes"	"weapon_galilar;weapon_sawedoff;"
@@ -4890,7 +4890,7 @@
 		"index"		"38"
 		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
-	"Блясък"
+	"Лумване"
 	{
 		"index"		"37"
 		"classes"	"weapon_deagle;weapon_ump45;weapon_revolver;"
@@ -4900,7 +4900,7 @@
 		"index"		"36"
 		"classes"	"weapon_tec9;"
 	}
-	"DDPAT металик"
+	"Металическа разпокъсана цифрова шарка"
 	{
 		"index"		"34"
 		"classes"	"weapon_mag7;weapon_p250;"
@@ -4955,7 +4955,7 @@
 		"index"		"20"
 		"classes"	"weapon_p90;"
 	}
-	"Градска DDPAT"
+	"Градска разпокъсана цифрова шарка"
 	{
 		"index"		"17"
 		"classes"	"weapon_deagle;weapon_m4a1;weapon_mac10;weapon_ump45;weapon_tec9;"
@@ -5010,7 +5010,7 @@
 		"index"		"6"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Горска DDPAT"
+	"Горска разпокъсана цифрова шарка"
 	{
 		"index"		"5"
 		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
