--- a/addons/sourcemod/configs/weapons/weapons_czech.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_czech.cfg
@@ -290,7 +290,7 @@
 		"index"		"1064"
 		"classes"	"weapon_cz75a;"
 	}
-	"The Coalition"
+	"Coalition"
 	{
 		"index"		"1063"
 		"classes"	"weapon_m4a1;"
