--- a/addons/sourcemod/configs/weapons/weapons_danish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_danish.cfg
@@ -1030,7 +1030,7 @@
 		"index"		"922"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Gold Arabesque"
+	"Guld Arabesque"
 	{
 		"index"		"921"
 		"classes"	"weapon_ak47;"
