--- a/addons/sourcemod/configs/weapons/weapons_russian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_russian.cfg
@@ -35,7 +35,7 @@
 		"index"		"1097"
 		"classes"	"weapon_m4a1;"
 	}
-	"Партизан"
+	"Диверсант"
 	{
 		"index"		"1096"
 		"classes"	"weapon_mp7;"
@@ -60,7 +60,7 @@
 		"index"		"1092"
 		"classes"	"weapon_famas;"
 	}
-	"Tread"
+	"Протектор"
 	{
 		"index"		"1091"
 		"classes"	"weapon_elite;"
@@ -200,12 +200,12 @@
 		"index"		"1080"
 		"classes"	"weapon_negev;"
 	}
-	"Следящие шины"
+	"Красные покрышки"
 	{
 		"index"		"1079"
 		"classes"	"weapon_glock;"
 	}
-	"Шинные следы"
+	"Синие покрышки"
 	{
 		"index"		"1078"
 		"classes"	"weapon_xm1014;"
@@ -235,7 +235,7 @@
 		"index"		"1073"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Призменная терраса"
+	"Призменная застройка"
 	{
 		"index"		"1072"
 		"classes"	"weapon_mag7;"
@@ -305,12 +305,12 @@
 		"index"		"1060"
 		"classes"	"weapon_ssg08;"
 	}
-	"Fizzy POP"
+	"Поп-шипучка"
 	{
 		"index"		"1059"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"POP AWP"
+	"Поп-AWP"
 	{
 		"index"		"1058"
 		"classes"	"weapon_awp;"
@@ -885,7 +885,7 @@
 		"index"		"941"
 		"classes"	"weapon_ak47;"
 	}
-	"Оксидовый оазис"
+	"Оксидный оазис"
 	{
 		"index"		"923"
 		"classes"	"weapon_mp5sd;"
@@ -1000,7 +1000,7 @@
 		"index"		"929"
 		"classes"	"weapon_nova;"
 	}
-	"Чёрно-коричневый"
+	"Чёрно-бежевый"
 	{
 		"index"		"928"
 		"classes"	"weapon_p250;"
@@ -5000,7 +5000,7 @@
 		"index"		"9"
 		"classes"	"weapon_aug;"
 	}
-	"Буря в пустыне"
+	"Песчаная буря"
 	{
 		"index"		"8"
 		"classes"	"weapon_g3sg1;weapon_m4a1;"
