--- a/addons/sourcemod/configs/weapons/weapons_schinese.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_schinese.cfg
@@ -200,17 +200,17 @@
 		"index"		"1080"
 		"classes"	"weapon_negev;"
 	}
-	"Track Tires"
+	"红色轮胎"
 	{
 		"index"		"1079"
 		"classes"	"weapon_glock;"
 	}
-	"胎面花纹"
+	"蓝色轮胎"
 	{
 		"index"		"1078"
 		"classes"	"weapon_xm1014;"
 	}
-	"至幻时刻"
+	"致幻时刻"
 	{
 		"index"		"1077"
 		"classes"	"weapon_nova;"
@@ -305,12 +305,12 @@
 		"index"		"1060"
 		"classes"	"weapon_ssg08;"
 	}
-	"Fizzy POP"
+	"气泡流行"
 	{
 		"index"		"1059"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"POP AWP"
+	"复古流行"
 	{
 		"index"		"1058"
 		"classes"	"weapon_awp;"
@@ -950,7 +950,7 @@
 		"index"		"820"
 		"classes"	"weapon_mp9;"
 	}
-	"沙漠九头蛇"
+	"九头金蛇"
 	{
 		"index"		"819"
 		"classes"	"weapon_awp;"
@@ -980,7 +980,7 @@
 		"index"		"933"
 		"classes"	"weapon_m249;weapon_cz75a;"
 	}
-	"枯藤老树"
+	"紫藤老树"
 	{
 		"index"		"932"
 		"classes"	"weapon_fiveseven;"
@@ -1030,7 +1030,7 @@
 		"index"		"922"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"金色藤蔓"
+	"黄金藤蔓"
 	{
 		"index"		"921"
 		"classes"	"weapon_ak47;"
@@ -2330,7 +2330,7 @@
 		"index"		"585"
 		"classes"	"weapon_fiveseven;"
 	}
-	"火卫—"
+	"火卫一"
 	{
 		"index"		"584"
 		"classes"	"weapon_awp;"
@@ -2795,7 +2795,7 @@
 		"index"		"532"
 		"classes"	"weapon_glock;"
 	}
-	"三位—体"
+	"三位一体"
 	{
 		"index"		"530"
 		"classes"	"weapon_fiveseven;"
@@ -3295,7 +3295,7 @@
 		"index"		"429"
 		"classes"	"weapon_famas;"
 	}
-	"「经济」克鲁尔"
+	"经济"
 	{
 		"index"		"428"
 		"classes"	"weapon_galilar;"
