--- a/addons/sourcemod/configs/weapons/weapons_turkish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_turkish.cfg
@@ -200,12 +200,12 @@
 		"index"		"1080"
 		"classes"	"weapon_negev;"
 	}
-	"Lastik İzi"
+	"Kırmızı Tekerlek"
 	{
 		"index"		"1079"
 		"classes"	"weapon_glock;"
 	}
-	"Lastik Profili"
+	"Mavi Tekerlek"
 	{
 		"index"		"1078"
 		"classes"	"weapon_xm1014;"
