--- a/addons/sourcemod/configs/weapons/weapons_french.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_french.cfg
@@ -40,7 +40,7 @@
 		"index"		"1096"
 		"classes"	"weapon_mp7;"
 	}
-	"Keeping Tabs"
+	"Sous surveillance"
 	{
 		"index"		"1095"
 		"classes"	"weapon_g3sg1;"
@@ -60,12 +60,12 @@
 		"index"		"1092"
 		"classes"	"weapon_famas;"
 	}
-	"Tread"
+	"Nervures"
 	{
 		"index"		"1091"
 		"classes"	"weapon_elite;"
 	}
-	"Ocean Drive"
+	"Bordure d'océan"
 	{
 		"index"		"1090"
 		"classes"	"weapon_deagle;"
@@ -80,7 +80,7 @@
 		"index"		"1088"
 		"classes"	"weapon_aug;"
 	}
-	"Leet Museo"
+	"Galerie d'élite"
 	{
 		"index"		"1087"
 		"classes"	"weapon_ak47;"
@@ -190,7 +190,7 @@
 		"index"		"1082"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Digital Architect"
+	"Architecte numérique"
 	{
 		"index"		"1081"
 		"classes"	"weapon_p250;"
@@ -200,17 +200,17 @@
 		"index"		"1080"
 		"classes"	"weapon_negev;"
 	}
-	"Red Tire"
+	"Pneu rouge"
 	{
 		"index"		"1079"
 		"classes"	"weapon_glock;"
 	}
-	"Blue Tire"
+	"Pneu bleu"
 	{
 		"index"		"1078"
 		"classes"	"weapon_xm1014;"
 	}
-	"Interlock"
+	"Antidémarrage"
 	{
 		"index"		"1077"
 		"classes"	"weapon_nova;"
@@ -220,12 +220,12 @@
 		"index"		"1076"
 		"classes"	"weapon_cz75a;"
 	}
-	"Strats"
+	"Stratégie"
 	{
 		"index"		"1075"
 		"classes"	"weapon_mac10;"
 	}
-	"Schematic"
+	"Schéma"
 	{
 		"index"		"1074"
 		"classes"	"weapon_p90;"
@@ -235,7 +235,7 @@
 		"index"		"1073"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Prism Terrace"
+	"Terrasse prismatique"
 	{
 		"index"		"1072"
 		"classes"	"weapon_mag7;"
@@ -245,7 +245,7 @@
 		"index"		"1071"
 		"classes"	"weapon_galilar;"
 	}
-	"Green Laminate"
+	"Vert stratifié"
 	{
 		"index"		"1070"
 		"classes"	"weapon_ak47;"
@@ -295,22 +295,22 @@
 		"index"		"1063"
 		"classes"	"weapon_m4a1;"
 	}
-	"Autumn Twilly"
+	"Twill automnal"
 	{
 		"index"		"1061"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Spring Twilly"
+	"Twill printanier"
 	{
 		"index"		"1060"
 		"classes"	"weapon_ssg08;"
 	}
-	"Pétillant"
+	"Pschitt"
 	{
 		"index"		"1059"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"POP AWP"
+	"AWPop art"
 	{
 		"index"		"1058"
 		"classes"	"weapon_awp;"
@@ -330,22 +330,22 @@
 		"index"		"1053"
 		"classes"	"weapon_famas;"
 	}
-	"Windblown"
+	"Pissenlit"
 	{
 		"index"		"1051"
 		"classes"	"weapon_nova;"
 	}
-	"Trigger Discipline"
+	"Discipline de la détente"
 	{
 		"index"		"1050"
 		"classes"	"weapon_deagle;"
 	}
-	"Oscillator"
+	"Oscillateur"
 	{
 		"index"		"1049"
 		"classes"	"weapon_ump45;"
 	}
-	"Heavy Metal"
+	"Heavy métal"
 	{
 		"index"		"1048"
 		"classes"	"weapon_sg556;"
@@ -385,7 +385,7 @@
 		"index"		"1041"
 		"classes"	"weapon_m4a1;"
 	}
-	"The Traitor"
+	"Traitre"
 	{
 		"index"		"1040"
 		"classes"	"weapon_usp_silencer;"
@@ -885,12 +885,12 @@
 		"index"		"941"
 		"classes"	"weapon_ak47;"
 	}
-	"Oxide Oasis"
+	"Oasis oxydée"
 	{
 		"index"		"923"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Desert Blossom"
+	"Floraison aride"
 	{
 		"index"		"765"
 		"classes"	"weapon_sg556;"
@@ -910,7 +910,7 @@
 		"index"		"828"
 		"classes"	"weapon_p90;"
 	}
-	"Humidor"
+	"Cave à cigares"
 	{
 		"index"		"827"
 		"classes"	"weapon_m249;"
@@ -925,7 +925,7 @@
 		"index"		"825"
 		"classes"	"weapon_p250;"
 	}
-	"Drift Wood"
+	"Bois de grève"
 	{
 		"index"		"824"
 		"classes"	"weapon_elite;"
@@ -960,7 +960,7 @@
 		"index"		"818"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Death Strike"
+	"Piqure mortelle"
 	{
 		"index"		"1052"
 		"classes"	"weapon_ssg08;"
@@ -970,7 +970,7 @@
 		"index"		"935"
 		"classes"	"weapon_mp7;weapon_ssg08;"
 	}
-	"Bleached"
+	"Décoloré"
 	{
 		"index"		"934"
 		"classes"	"weapon_sg556;"
@@ -1000,7 +1000,7 @@
 		"index"		"929"
 		"classes"	"weapon_nova;"
 	}
-	"Black & Tan"
+	"Noir et beige"
 	{
 		"index"		"928"
 		"classes"	"weapon_p250;"
@@ -1035,7 +1035,7 @@
 		"index"		"921"
 		"classes"	"weapon_ak47;"
 	}
-	"Parched"
+	"Aridité"
 	{
 		"index"		"880"
 		"classes"	"weapon_sawedoff;"
