--- a/addons/sourcemod/configs/weapons/weapons_german.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_german.cfg
@@ -60,7 +60,7 @@
 		"index"		"1092"
 		"classes"	"weapon_famas;"
 	}
-	"Tritt"
+	"Profil"
 	{
 		"index"		"1091"
 		"classes"	"weapon_elite;"
@@ -200,12 +200,12 @@
 		"index"		"1080"
 		"classes"	"weapon_negev;"
 	}
-	"Rennstreckenreifen"
+	"Roter Reifen"
 	{
 		"index"		"1079"
 		"classes"	"weapon_glock;"
 	}
-	"Reifenprofil"
+	"Blauer Reifen"
 	{
 		"index"		"1078"
 		"classes"	"weapon_xm1014;"
