--- a/addons/sourcemod/configs/weapons/weapons_hungarian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_hungarian.cfg
@@ -1,21 +1,21 @@
 "Skins"
 {
-	"Watchdog"
+	"Házőrző"
 	{
 		"index"		"1103"
 		"classes"	"weapon_xm1014;"
 	}
-	"Black Lotus"
+	"Fekete Lótusz"
 	{
 		"index"		"1102"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Turbo Peek"
+	"Turbócsúcs"
 	{
 		"index"		"1101"
 		"classes"	"weapon_ssg08;"
 	}
-	"Snack Attack"
+	"Nasiroham"
 	{
 		"index"		"1100"
 		"classes"	"weapon_glock;"
@@ -25,32 +25,32 @@
 		"index"		"1099"
 		"classes"	"weapon_bizon;"
 	}
-	"Toybox"
+	"Játékdoboz"
 	{
 		"index"		"1098"
 		"classes"	"weapon_mac10;"
 	}
-	"Spider Lily"
+	"Pókliliom"
 	{
 		"index"		"1097"
 		"classes"	"weapon_m4a1;"
 	}
-	"Guerrilla"
+	"Gerilla"
 	{
 		"index"		"1096"
 		"classes"	"weapon_mp7;"
 	}
-	"Keeping Tabs"
+	"Megfigyelés Alatt"
 	{
 		"index"		"1095"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Mount Fuji"
+	"Fudzsi-hegy"
 	{
 		"index"		"1094"
 		"classes"	"weapon_mp9;"
 	}
-	"Boost Protocol"
+	"Erősítésprotokoll"
 	{
 		"index"		"1093"
 		"classes"	"weapon_fiveseven;"
@@ -60,22 +60,22 @@
 		"index"		"1092"
 		"classes"	"weapon_famas;"
 	}
-	"Tread"
+	"Csavarmenet"
 	{
 		"index"		"1091"
 		"classes"	"weapon_elite;"
 	}
-	"Ocean Drive"
+	"Óceánparti Út"
 	{
 		"index"		"1090"
 		"classes"	"weapon_deagle;"
 	}
-	"BI83 Spectrum"
+	"BI83 Színkép"
 	{
 		"index"		"1089"
 		"classes"	"weapon_mag7;"
 	}
-	"Plague"
+	"Pestis"
 	{
 		"index"		"1088"
 		"classes"	"weapon_aug;"
@@ -160,92 +160,92 @@
 		"index"		"1104"
 		"classes"	"weapon_knife_survival_bowie;"
 	}
-	"Faulty Wiring"
+	"Hibás Huzalozás"
 	{
 		"index"		"1066"
 		"classes"	"weapon_famas;"
 	}
-	"Oil Change"
+	"Olajcsere"
 	{
 		"index"		"1086"
 		"classes"	"weapon_elite;"
 	}
-	"Mechanism"
+	"Gépezet"
 	{
 		"index"		"1085"
 		"classes"	"weapon_ump45;"
 	}
-	"Hazard Pay"
+	"Veszélyességi Pótlék"
 	{
 		"index"		"1084"
 		"classes"	"weapon_sg556;"
 	}
-	"Breaker Box"
+	"Kapcsolószekrény"
 	{
 		"index"		"1083"
 		"classes"	"weapon_bizon;"
 	}
-	"Fall Hazard"
+	"Zuhanásveszély"
 	{
 		"index"		"1082"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Digital Architect"
+	"Digitális Építész"
 	{
 		"index"		"1081"
 		"classes"	"weapon_p250;"
 	}
-	"Infrastructure"
+	"Infrastruktúra"
 	{
 		"index"		"1080"
 		"classes"	"weapon_negev;"
 	}
-	"Red Tire"
+	"Piros Kerék"
 	{
 		"index"		"1079"
 		"classes"	"weapon_glock;"
 	}
-	"Blue Tire"
+	"Kék Kerék"
 	{
 		"index"		"1078"
 		"classes"	"weapon_xm1014;"
 	}
-	"Interlock"
+	"Összefonódás"
 	{
 		"index"		"1077"
 		"classes"	"weapon_nova;"
 	}
-	"Framework"
+	"Vázszerkezet"
 	{
 		"index"		"1076"
 		"classes"	"weapon_cz75a;"
 	}
-	"Strats"
+	"Stratégiák"
 	{
 		"index"		"1075"
 		"classes"	"weapon_mac10;"
 	}
-	"Schematic"
+	"Vázlat"
 	{
 		"index"		"1074"
 		"classes"	"weapon_p90;"
 	}
-	"Imminent Danger"
+	"Közvetlen Veszély"
 	{
 		"index"		"1073"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Prism Terrace"
+	"Prizmafennsík"
 	{
 		"index"		"1072"
 		"classes"	"weapon_mag7;"
 	}
-	"CAUTION!"
+	"VIGYÁZAT!"
 	{
 		"index"		"1071"
 		"classes"	"weapon_galilar;"
 	}
-	"Green Laminate"
+	"Laminált Zöld"
 	{
 		"index"		"1070"
 		"classes"	"weapon_ak47;"
@@ -285,27 +285,27 @@
 		"index"		"1065"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Syndicate"
+	"Szindikátus"
 	{
 		"index"		"1064"
 		"classes"	"weapon_cz75a;"
 	}
-	"The Coalition"
+	"A Koalíció"
 	{
 		"index"		"1063"
 		"classes"	"weapon_m4a1;"
 	}
-	"Autumn Twilly"
+	"Őszi Formák"
 	{
 		"index"		"1061"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Spring Twilly"
+	"Tavaszi Formák"
 	{
 		"index"		"1060"
 		"classes"	"weapon_ssg08;"
 	}
-	"Fizzy POP"
+	"Bubis POP"
 	{
 		"index"		"1059"
 		"classes"	"weapon_m4a1_silencer;"
@@ -315,17 +315,17 @@
 		"index"		"1058"
 		"classes"	"weapon_awp;"
 	}
-	"Sputnik"
+	"Szputnyik"
 	{
 		"index"		"1056"
 		"classes"	"weapon_deagle;"
 	}
-	"Space Race"
+	"Űrverseny"
 	{
 		"index"		"1055"
 		"classes"	"weapon_hkp2000;"
 	}
-	"Meltdown"
+	"Magolvadás"
 	{
 		"index"		"1053"
 		"classes"	"weapon_famas;"
@@ -885,27 +885,27 @@
 		"index"		"941"
 		"classes"	"weapon_ak47;"
 	}
-	"Oxide Oasis"
+	"Oxidált Oázis"
 	{
 		"index"		"923"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Desert Blossom"
+	"Sivatagi Virág"
 	{
 		"index"		"765"
 		"classes"	"weapon_sg556;"
 	}
-	"Fennec Fox"
+	"Sivatagi Róka"
 	{
 		"index"		"764"
 		"classes"	"weapon_deagle;"
 	}
-	"Anolis"
+	"Anolisz"
 	{
 		"index"		"829"
 		"classes"	"weapon_bizon;"
 	}
-	"Verdant Growth"
+	"Zöldellő Hajtások"
 	{
 		"index"		"828"
 		"classes"	"weapon_p90;"
@@ -915,127 +915,127 @@
 		"index"		"827"
 		"classes"	"weapon_m249;"
 	}
-	"Sienna Damask"
+	"Siennai Damaszk"
 	{
 		"index"		"826"
 		"classes"	"weapon_mac10;"
 	}
-	"Drought"
+	"Aszály"
 	{
 		"index"		"825"
 		"classes"	"weapon_p250;"
 	}
-	"Drift Wood"
+	"Uszadékfa"
 	{
 		"index"		"824"
 		"classes"	"weapon_elite;"
 	}
-	"Sand Storm"
+	"Homokvihar"
 	{
 		"index"		"823"
 		"classes"	"weapon_aug;"
 	}
-	"Navy Sheen"
+	"Tengerfény"
 	{
 		"index"		"822"
 		"classes"	"weapon_mag7;"
 	}
-	"Elegant Vines"
+	"Elegáns Indák"
 	{
 		"index"		"821"
 		"classes"	"weapon_xm1014;"
 	}
-	"Music Box"
+	"Zenedoboz"
 	{
 		"index"		"820"
 		"classes"	"weapon_mp9;"
 	}
-	"Desert Hydra"
+	"Sivatagi Hüdra"
 	{
 		"index"		"819"
 		"classes"	"weapon_awp;"
 	}
-	"Purple DDPAT"
+	"Lila DDPAT"
 	{
 		"index"		"818"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Death Strike"
+	"Halálos Csapás"
 	{
 		"index"		"1052"
 		"classes"	"weapon_ssg08;"
 	}
-	"Prey"
+	"Préda"
 	{
 		"index"		"935"
 		"classes"	"weapon_mp7;weapon_ssg08;"
 	}
-	"Bleached"
+	"Napszítta"
 	{
 		"index"		"934"
 		"classes"	"weapon_sg556;"
 	}
-	"Midnight Palm"
+	"Éjféli Pálma"
 	{
 		"index"		"933"
 		"classes"	"weapon_m249;weapon_cz75a;"
 	}
-	"Withered Vine"
+	"Fonnyadt Indák"
 	{
 		"index"		"932"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Old Roots"
+	"Régi Hajtások"
 	{
 		"index"		"931"
 		"classes"	"weapon_mp9;"
 	}
-	"New Roots"
+	"Új Hajtások"
 	{
 		"index"		"930"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Quick Sand"
+	"Folyóhomok"
 	{
 		"index"		"929"
 		"classes"	"weapon_nova;"
 	}
-	"Black & Tan"
+	"Fekete és Bézs"
 	{
 		"index"		"928"
 		"classes"	"weapon_p250;"
 	}
-	"Spalted Wood"
+	"Korhadt Fa"
 	{
 		"index"		"927"
 		"classes"	"weapon_aug;"
 	}
-	"Red DDPAT"
+	"Piros DDPAT"
 	{
 		"index"		"926"
 		"classes"	"weapon_m4a1;"
 	}
-	"Desert DDPAT"
+	"Sivatagi DDPAT"
 	{
 		"index"		"925"
 		"classes"	"weapon_p90;"
 	}
-	"Desert Brush"
+	"Sivatagi Bozót"
 	{
 		"index"		"924"
 		"classes"	"weapon_revolver;"
 	}
-	"Orange Anolis"
+	"Narancssárga Anolisz"
 	{
 		"index"		"922"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Gold Arabesque"
+	"Arany Arabeszk"
 	{
 		"index"		"921"
 		"classes"	"weapon_ak47;"
 	}
-	"Parched"
+	"Szikkadt"
 	{
 		"index"		"880"
 		"classes"	"weapon_sawedoff;"
