--- a/addons/sourcemod/configs/weapons/weapons_italian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_italian.cfg
@@ -35,7 +35,7 @@
 		"index"		"1097"
 		"classes"	"weapon_m4a1;"
 	}
-	"Guerilla"
+	"Guerrilla"
 	{
 		"index"		"1096"
 		"classes"	"weapon_mp7;"
@@ -200,12 +200,12 @@
 		"index"		"1080"
 		"classes"	"weapon_negev;"
 	}
-	"Track Tires"
+	"Red Tire"
 	{
 		"index"		"1079"
 		"classes"	"weapon_glock;"
 	}
-	"Tire Tread"
+	"Blue Tire"
 	{
 		"index"		"1078"
 		"classes"	"weapon_xm1014;"
