--- a/addons/sourcemod/configs/weapons/weapons_latam.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_latam.cfg
@@ -15,7 +15,7 @@
 		"index"		"1101"
 		"classes"	"weapon_ssg08;"
 	}
-	"Snack Attack"
+	"Tentempié"
 	{
 		"index"		"1100"
 		"classes"	"weapon_glock;"
@@ -30,7 +30,7 @@
 		"index"		"1098"
 		"classes"	"weapon_mac10;"
 	}
-	"Spider Lily"
+	"Lirio araña"
 	{
 		"index"		"1097"
 		"classes"	"weapon_m4a1;"
@@ -75,7 +75,7 @@
 		"index"		"1089"
 		"classes"	"weapon_mag7;"
 	}
-	"Plague"
+	"Plaga"
 	{
 		"index"		"1088"
 		"classes"	"weapon_aug;"
@@ -180,7 +180,7 @@
 		"index"		"1084"
 		"classes"	"weapon_sg556;"
 	}
-	"Breaker Box"
+	"Caja de fusibles"
 	{
 		"index"		"1083"
 		"classes"	"weapon_bizon;"
@@ -200,12 +200,12 @@
 		"index"		"1080"
 		"classes"	"weapon_negev;"
 	}
-	"Huellas de llantas"
+	"Llanta roja"
 	{
 		"index"		"1079"
 		"classes"	"weapon_glock;"
 	}
-	"Marca de llantas"
+	"Llanta azul"
 	{
 		"index"		"1078"
 		"classes"	"weapon_xm1014;"
@@ -325,7 +325,7 @@
 		"index"		"1055"
 		"classes"	"weapon_hkp2000;"
 	}
-	"Meltdown"
+	"Fusión nuclear"
 	{
 		"index"		"1053"
 		"classes"	"weapon_famas;"
@@ -905,7 +905,7 @@
 		"index"		"829"
 		"classes"	"weapon_bizon;"
 	}
-	"Verdant Growth"
+	"Crecimiento verde"
 	{
 		"index"		"828"
 		"classes"	"weapon_p90;"
@@ -930,12 +930,12 @@
 		"index"		"824"
 		"classes"	"weapon_elite;"
 	}
-	"Sand Storm"
+	"Tormenta de arena"
 	{
 		"index"		"823"
 		"classes"	"weapon_aug;"
 	}
-	"Navy Sheen"
+	"Brillo azul marino"
 	{
 		"index"		"822"
 		"classes"	"weapon_mag7;"
@@ -950,17 +950,17 @@
 		"index"		"820"
 		"classes"	"weapon_mp9;"
 	}
-	"Desert Hydra"
+	"Hidra del desierto"
 	{
 		"index"		"819"
 		"classes"	"weapon_awp;"
 	}
-	"Purple DDPAT"
+	"DDPAT púrpura"
 	{
 		"index"		"818"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Death Strike"
+	"Golpe mortal"
 	{
 		"index"		"1052"
 		"classes"	"weapon_ssg08;"
@@ -995,7 +995,7 @@
 		"index"		"930"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Quick Sand"
+	"Arenas movedizas"
 	{
 		"index"		"929"
 		"classes"	"weapon_nova;"
