--- a/addons/sourcemod/configs/weapons/weapons_polish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_polish.cfg
@@ -200,12 +200,12 @@
 		"index"		"1080"
 		"classes"	"weapon_negev;"
 	}
-	"Opony wyścigowe"
+	"Czerwona opona"
 	{
 		"index"		"1079"
 		"classes"	"weapon_glock;"
 	}
-	"Bieżnik"
+	"Niebieska opona"
 	{
 		"index"		"1078"
 		"classes"	"weapon_xm1014;"
@@ -305,12 +305,12 @@
 		"index"		"1060"
 		"classes"	"weapon_ssg08;"
 	}
-	"Napój gazowany"
+	"Technowojna"
 	{
 		"index"		"1059"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Wyskakująca spluwa"
+	"Cyberwojna"
 	{
 		"index"		"1058"
 		"classes"	"weapon_awp;"
@@ -905,7 +905,7 @@
 		"index"		"829"
 		"classes"	"weapon_bizon;"
 	}
-	"Bujny wzrost"
+	"Bujny rozrost"
 	{
 		"index"		"828"
 		"classes"	"weapon_p90;"
