--- a/addons/sourcemod/configs/weapons/weapons_ukrainian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_ukrainian.cfg
@@ -75,7 +75,7 @@
 		"index"		"1089"
 		"classes"	"weapon_mag7;"
 	}
-	"Plague"
+	"Чума"
 	{
 		"index"		"1088"
 		"classes"	"weapon_aug;"
@@ -165,7 +165,7 @@
 		"index"		"1066"
 		"classes"	"weapon_famas;"
 	}
-	"Oil Change"
+	"Заміна оливи"
 	{
 		"index"		"1086"
 		"classes"	"weapon_elite;"
@@ -200,7 +200,7 @@
 		"index"		"1080"
 		"classes"	"weapon_negev;"
 	}
-	"Red Tire"
+	"Червона шина"
 	{
 		"index"		"1079"
 		"classes"	"weapon_glock;"
@@ -225,7 +225,7 @@
 		"index"		"1075"
 		"classes"	"weapon_mac10;"
 	}
-	"Schematic"
+	"Схема"
 	{
 		"index"		"1074"
 		"classes"	"weapon_p90;"
@@ -240,7 +240,7 @@
 		"index"		"1072"
 		"classes"	"weapon_mag7;"
 	}
-	"CAUTION!"
+	"ОБЕРЕЖНО!"
 	{
 		"index"		"1071"
 		"classes"	"weapon_galilar;"
@@ -275,7 +275,7 @@
 		"index"		"1119"
 		"classes"	"weapon_glock;"
 	}
-	"Propaganda"
+	"Пропаганда"
 	{
 		"index"		"1067"
 		"classes"	"weapon_mac10;"
@@ -315,7 +315,7 @@
 		"index"		"1058"
 		"classes"	"weapon_awp;"
 	}
-	"Sputnik"
+	"Супутник"
 	{
 		"index"		"1056"
 		"classes"	"weapon_deagle;"
@@ -950,7 +950,7 @@
 		"index"		"820"
 		"classes"	"weapon_mp9;"
 	}
-	"Desert Hydra"
+	"Пустельна гідра"
 	{
 		"index"		"819"
 		"classes"	"weapon_awp;"
@@ -960,7 +960,7 @@
 		"index"		"818"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Death Strike"
+	"Смертельний удар"
 	{
 		"index"		"1052"
 		"classes"	"weapon_ssg08;"
@@ -1020,7 +1020,7 @@
 		"index"		"925"
 		"classes"	"weapon_p90;"
 	}
-	"Desert Brush"
+	"Пустельні штрихи"
 	{
 		"index"		"924"
 		"classes"	"weapon_revolver;"
