--- a/addons/sourcemod/configs/weapons/weapons_hungarian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_hungarian.cfg
@@ -1,86 +1,171 @@
 "Skins"
 {
-	"Spirit Board"
+	"Winterized"
+	{
+		"index"		"1158"
+		"classes"	"weapon_glock;"
+	}
+	"Roadblock"
+	{
+		"index"		"1157"
+		"classes"	"weapon_ump45;"
+	}
+	"Flora Carnivora"
+	{
+		"index"		"1156"
+		"classes"	"weapon_elite;"
+	}
+	"Kiss♥Love"
+	{
+		"index"		"1155"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Vent Rush"
+	{
+		"index"		"1154"
+		"classes"	"weapon_p90;"
+	}
+	"Visions"
+	{
+		"index"		"1153"
+		"classes"	"weapon_p250;"
+	}
+	"Drop Me"
+	{
+		"index"		"1152"
+		"classes"	"weapon_negev;"
+	}
+	"Dragon Tech"
+	{
+		"index"		"1151"
+		"classes"	"weapon_sg556;"
+	}
+	"Monkeyflage"
+	{
+		"index"		"1150"
+		"classes"	"weapon_mac10;"
+	}
+	"Poly Mag"
+	{
+		"index"		"1149"
+		"classes"	"weapon_m4a1;"
+	}
+	"Downtown"
+	{
+		"index"		"1148"
+		"classes"	"weapon_m249;"
+	}
+	"Destroyer"
+	{
+		"index"		"1147"
+		"classes"	"weapon_galilar;"
+	}
+	"Meow 36"
+	{
+		"index"		"1146"
+		"classes"	"weapon_famas;"
+	}
+	"Crazy 8"
+	{
+		"index"		"1145"
+		"classes"	"weapon_revolver;"
+	}
+	"Chromatic Aberration"
+	{
+		"index"		"1144"
+		"classes"	"weapon_awp;"
+	}
+	"Ice Coaled"
+	{
+		"index"		"1143"
+		"classes"	"weapon_ak47;"
+	}
+	"Printstream"
+	{
+		"index"		"1142"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Lélektábla"
 	{
 		"index"		"1140"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Poultrygeist"
+	"Kakaskodás"
 	{
 		"index"		"1139"
 		"classes"	"weapon_scar20;"
 	}
-	"Lifted Spirits"
+	"Emelkedett Lelkek"
 	{
 		"index"		"1138"
 		"classes"	"weapon_hkp2000;"
 	}
-	"Necro Jr."
+	"Ifj. Necro"
 	{
 		"index"		"1137"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Ticket to Hell"
+	"Menetjegy a Pokolba"
 	{
 		"index"		"1136"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Zombie Offensive"
+	"Zombioffenzíva"
 	{
 		"index"		"1135"
 		"classes"	"weapon_xm1014;"
 	}
-	"Starlight Protector"
+	"Védelmező Csillagfény"
 	{
 		"index"		"1134"
 		"classes"	"weapon_mp9;"
 	}
-	"Abyssal Apparition"
+	"Lidérces Mélység"
 	{
 		"index"		"1133"
 		"classes"	"weapon_mp7;"
 	}
-	"Foresight"
+	"Jövőbe Látás"
 	{
 		"index"		"1132"
 		"classes"	"weapon_mag7;"
 	}
-	"Ensnared"
+	"Csapdában"
 	{
 		"index"		"1131"
 		"classes"	"weapon_mac10;"
 	}
-	"Night Terror"
+	"Felrettenés"
 	{
 		"index"		"1130"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Dream Glade"
+	"Álomtisztás"
 	{
 		"index"		"1129"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Scrawl"
+	"Firka"
 	{
 		"index"		"1128"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Rapid Eye Movement"
+	"Gyors Szemmozgás"
 	{
 		"index"		"1127"
 		"classes"	"weapon_famas;"
 	}
-	"Melondrama"
+	"Dörögdinnye"
 	{
 		"index"		"1126"
 		"classes"	"weapon_elite;"
 	}
-	"Space Cat"
+	"Űrmacska"
 	{
 		"index"		"1125"
 		"classes"	"weapon_bizon;"
 	}
-	"Nightwish"
+	"Éjsóvárság"
 	{
 		"index"		"1141"
 		"classes"	"weapon_ak47;"
@@ -655,7 +740,7 @@
 		"index"		"1028"
 		"classes"	"weapon_scar20;"
 	}
-	"Cél bemérve"
+	"Cél Bemérve"
 	{
 		"index"		"1027"
 		"classes"	"weapon_usp_silencer;"
@@ -720,7 +805,7 @@
 		"index"		"991"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Arany bizmut"
+	"Arany Bizmut"
 	{
 		"index"		"990"
 		"classes"	"weapon_ump45;"
@@ -735,7 +820,7 @@
 		"index"		"988"
 		"classes"	"weapon_glock;"
 	}
-	"Áttetsző polimer"
+	"Áttetsző Polimer"
 	{
 		"index"		"987"
 		"classes"	"weapon_nova;"
@@ -750,12 +835,12 @@
 		"index"		"985"
 		"classes"	"weapon_m4a1;"
 	}
-	"Nyomdafolyam"
+	"Printstream"
 	{
 		"index"		"984"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Mély megkönnyebbülés"
+	"Mély Megkönnyebbülés"
 	{
 		"index"		"983"
 		"classes"	"weapon_m249;"
@@ -770,7 +855,7 @@
 		"index"		"981"
 		"classes"	"weapon_galilar;"
 	}
-	"Digitális háló"
+	"Digitális Háló"
 	{
 		"index"		"980"
 		"classes"	"weapon_g3sg1;"
@@ -785,7 +870,7 @@
 		"index"		"978"
 		"classes"	"weapon_elite;"
 	}
-	"Kakaószín tombolás"
+	"Kakaószín Tombolás"
 	{
 		"index"		"977"
 		"classes"	"weapon_p90;"
@@ -795,7 +880,7 @@
 		"index"		"976"
 		"classes"	"weapon_cz75a;"
 	}
-	"Külső váz"
+	"Külső Váz"
 	{
 		"index"		"975"
 		"classes"	"weapon_awp;"
@@ -840,7 +925,7 @@
 		"index"		"967"
 		"classes"	"weapon_ssg08;"
 	}
-	"Öreg rozsdás"
+	"Öreg Rozsdás"
 	{
 		"index"		"966"
 		"classes"	"weapon_sg556;"
@@ -860,7 +945,7 @@
 		"index"		"963"
 		"classes"	"weapon_glock;"
 	}
-	"Nyomdafolyam"
+	"Printstream"
 	{
 		"index"		"962"
 		"classes"	"weapon_deagle;"
@@ -940,7 +1025,7 @@
 		"index"		"947"
 		"classes"	"weapon_mac10;"
 	}
-	"Kettes játékos"
+	"Kettes Játékos"
 	{
 		"index"		"946"
 		"classes"	"weapon_m4a1_silencer;"
@@ -1180,7 +1265,7 @@
 		"index"		"909"
 		"classes"	"weapon_mag7;"
 	}
-	"Klasszikus láda"
+	"Klasszikus Láda"
 	{
 		"index"		"908"
 		"classes"	"weapon_mac10;"
@@ -1200,7 +1285,7 @@
 		"index"		"905"
 		"classes"	"weapon_tec9;"
 	}
-	"Üzemen kívül helyezve"
+	"Üzemen Kívül Helyezve"
 	{
 		"index"		"904"
 		"classes"	"weapon_famas;"
