--- a/addons/sourcemod/configs/weapons/weapons_spanish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_spanish.cfg
@@ -1,71 +1,156 @@
 "Skins"
 {
-	"Spirit Board"
+	"Winterized"
+	{
+		"index"		"1158"
+		"classes"	"weapon_glock;"
+	}
+	"Roadblock"
+	{
+		"index"		"1157"
+		"classes"	"weapon_ump45;"
+	}
+	"Flora Carnivora"
+	{
+		"index"		"1156"
+		"classes"	"weapon_elite;"
+	}
+	"Kiss♥Love"
+	{
+		"index"		"1155"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Vent Rush"
+	{
+		"index"		"1154"
+		"classes"	"weapon_p90;"
+	}
+	"Visions"
+	{
+		"index"		"1153"
+		"classes"	"weapon_p250;"
+	}
+	"Drop Me"
+	{
+		"index"		"1152"
+		"classes"	"weapon_negev;"
+	}
+	"Dragon Tech"
+	{
+		"index"		"1151"
+		"classes"	"weapon_sg556;"
+	}
+	"Monkeyflage"
+	{
+		"index"		"1150"
+		"classes"	"weapon_mac10;"
+	}
+	"Poly Mag"
+	{
+		"index"		"1149"
+		"classes"	"weapon_m4a1;"
+	}
+	"Downtown"
+	{
+		"index"		"1148"
+		"classes"	"weapon_m249;"
+	}
+	"Destroyer"
+	{
+		"index"		"1147"
+		"classes"	"weapon_galilar;"
+	}
+	"Meow 36"
+	{
+		"index"		"1146"
+		"classes"	"weapon_famas;"
+	}
+	"Crazy 8"
+	{
+		"index"		"1145"
+		"classes"	"weapon_revolver;"
+	}
+	"Chromatic Aberration"
+	{
+		"index"		"1144"
+		"classes"	"weapon_awp;"
+	}
+	"Ice Coaled"
+	{
+		"index"		"1143"
+		"classes"	"weapon_ak47;"
+	}
+	"Printstream"
+	{
+		"index"		"1142"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Tablero de espíritus"
 	{
 		"index"		"1140"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Poultrygeist"
+	"Alectorofobia"
 	{
 		"index"		"1139"
 		"classes"	"weapon_scar20;"
 	}
-	"Lifted Spirits"
+	"Espíritus elevados"
 	{
 		"index"		"1138"
 		"classes"	"weapon_hkp2000;"
 	}
-	"Necro Jr."
+	"Necro jr."
 	{
 		"index"		"1137"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Ticket to Hell"
+	"Billete al infierno"
 	{
 		"index"		"1136"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Zombie Offensive"
+	"Ofensiva zombi"
 	{
 		"index"		"1135"
 		"classes"	"weapon_xm1014;"
 	}
-	"Starlight Protector"
+	"Protector de luz estelar"
 	{
 		"index"		"1134"
 		"classes"	"weapon_mp9;"
 	}
-	"Abyssal Apparition"
+	"Aparición abisal"
 	{
 		"index"		"1133"
 		"classes"	"weapon_mp7;"
 	}
-	"Foresight"
+	"Predicción"
 	{
 		"index"		"1132"
 		"classes"	"weapon_mag7;"
 	}
-	"Ensnared"
+	"Atrapados"
 	{
 		"index"		"1131"
 		"classes"	"weapon_mac10;"
 	}
-	"Night Terror"
+	"Terror nocturno"
 	{
 		"index"		"1130"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Dream Glade"
+	"Claro de ensueño"
 	{
 		"index"		"1129"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Scrawl"
+	"Garabatos"
 	{
 		"index"		"1128"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Rapid Eye Movement"
+	"Movimientos oculares rápidos"
 	{
 		"index"		"1127"
 		"classes"	"weapon_famas;"
@@ -75,12 +160,12 @@
 		"index"		"1126"
 		"classes"	"weapon_elite;"
 	}
-	"Space Cat"
+	"Gato cósmico"
 	{
 		"index"		"1125"
 		"classes"	"weapon_bizon;"
 	}
-	"Nightwish"
+	"Deseo nocturno"
 	{
 		"index"		"1141"
 		"classes"	"weapon_ak47;"
@@ -750,7 +835,7 @@
 		"index"		"985"
 		"classes"	"weapon_m4a1;"
 	}
-	"PrintStream"
+	"Printstream"
 	{
 		"index"		"984"
 		"classes"	"weapon_m4a1_silencer;"
@@ -860,7 +945,7 @@
 		"index"		"963"
 		"classes"	"weapon_glock;"
 	}
-	"PrintStream"
+	"Printstream"
 	{
 		"index"		"962"
 		"classes"	"weapon_deagle;"
