--- a/addons/sourcemod/configs/weapons/weapons_schinese.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_schinese.cfg
@@ -1,86 +1,171 @@
 "Skins"
 {
-	"Spirit Board"
+	"Winterized"
+	{
+		"index"		"1158"
+		"classes"	"weapon_glock;"
+	}
+	"Roadblock"
+	{
+		"index"		"1157"
+		"classes"	"weapon_ump45;"
+	}
+	"Flora Carnivora"
+	{
+		"index"		"1156"
+		"classes"	"weapon_elite;"
+	}
+	"Kiss♥Love"
+	{
+		"index"		"1155"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Vent Rush"
+	{
+		"index"		"1154"
+		"classes"	"weapon_p90;"
+	}
+	"Visions"
+	{
+		"index"		"1153"
+		"classes"	"weapon_p250;"
+	}
+	"Drop Me"
+	{
+		"index"		"1152"
+		"classes"	"weapon_negev;"
+	}
+	"Dragon Tech"
+	{
+		"index"		"1151"
+		"classes"	"weapon_sg556;"
+	}
+	"Monkeyflage"
+	{
+		"index"		"1150"
+		"classes"	"weapon_mac10;"
+	}
+	"Poly Mag"
+	{
+		"index"		"1149"
+		"classes"	"weapon_m4a1;"
+	}
+	"Downtown"
+	{
+		"index"		"1148"
+		"classes"	"weapon_m249;"
+	}
+	"Destroyer"
+	{
+		"index"		"1147"
+		"classes"	"weapon_galilar;"
+	}
+	"Meow 36"
+	{
+		"index"		"1146"
+		"classes"	"weapon_famas;"
+	}
+	"Crazy 8"
+	{
+		"index"		"1145"
+		"classes"	"weapon_revolver;"
+	}
+	"Chromatic Aberration"
+	{
+		"index"		"1144"
+		"classes"	"weapon_awp;"
+	}
+	"Ice Coaled"
+	{
+		"index"		"1143"
+		"classes"	"weapon_ak47;"
+	}
+	"Printstream"
+	{
+		"index"		"1142"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"灵应牌"
 	{
 		"index"		"1140"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Poultrygeist"
+	"暗夜活死鸡"
 	{
 		"index"		"1139"
 		"classes"	"weapon_scar20;"
 	}
-	"Lifted Spirits"
+	"升天"
 	{
 		"index"		"1138"
 		"classes"	"weapon_hkp2000;"
 	}
-	"Necro Jr."
+	"小小噩梦"
 	{
 		"index"		"1137"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Ticket to Hell"
+	"地狱门票"
 	{
 		"index"		"1136"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Zombie Offensive"
+	"行尸攻势"
 	{
 		"index"		"1135"
 		"classes"	"weapon_xm1014;"
 	}
-	"Starlight Protector"
+	"星使"
 	{
 		"index"		"1134"
 		"classes"	"weapon_mp9;"
 	}
-	"Abyssal Apparition"
+	"幽幻深渊"
 	{
 		"index"		"1133"
 		"classes"	"weapon_mp7;"
 	}
-	"Foresight"
+	"先见之明"
 	{
 		"index"		"1132"
 		"classes"	"weapon_mag7;"
 	}
-	"Ensnared"
+	"坐牢"
 	{
 		"index"		"1131"
 		"classes"	"weapon_mac10;"
 	}
-	"Night Terror"
+	"夜无眠"
 	{
 		"index"		"1130"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Dream Glade"
+	"梦之林地"
 	{
 		"index"		"1129"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Scrawl"
+	"涂鸦潦草"
 	{
 		"index"		"1128"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Rapid Eye Movement"
+	"目皆转睛"
 	{
 		"index"		"1127"
 		"classes"	"weapon_famas;"
 	}
-	"Melondrama"
+	"瓜瓜"
 	{
 		"index"		"1126"
 		"classes"	"weapon_elite;"
 	}
-	"Space Cat"
+	"太空猫"
 	{
 		"index"		"1125"
 		"classes"	"weapon_bizon;"
 	}
-	"Nightwish"
+	"夜愿"
 	{
 		"index"		"1141"
 		"classes"	"weapon_ak47;"
@@ -750,7 +835,7 @@
 		"index"		"985"
 		"classes"	"weapon_m4a1;"
 	}
-	"印花集"
+	"Printstream"
 	{
 		"index"		"984"
 		"classes"	"weapon_m4a1_silencer;"
@@ -860,7 +945,7 @@
 		"index"		"963"
 		"classes"	"weapon_glock;"
 	}
-	"印花集"
+	"Printstream"
 	{
 		"index"		"962"
 		"classes"	"weapon_deagle;"
