--- a/addons/sourcemod/configs/weapons/weapons_tchinese.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_tchinese.cfg
@@ -1,5 +1,90 @@
 "Skins"
 {
+	"Winterized"
+	{
+		"index"		"1158"
+		"classes"	"weapon_glock;"
+	}
+	"Roadblock"
+	{
+		"index"		"1157"
+		"classes"	"weapon_ump45;"
+	}
+	"Flora Carnivora"
+	{
+		"index"		"1156"
+		"classes"	"weapon_elite;"
+	}
+	"Kiss♥Love"
+	{
+		"index"		"1155"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Vent Rush"
+	{
+		"index"		"1154"
+		"classes"	"weapon_p90;"
+	}
+	"Visions"
+	{
+		"index"		"1153"
+		"classes"	"weapon_p250;"
+	}
+	"Drop Me"
+	{
+		"index"		"1152"
+		"classes"	"weapon_negev;"
+	}
+	"Dragon Tech"
+	{
+		"index"		"1151"
+		"classes"	"weapon_sg556;"
+	}
+	"Monkeyflage"
+	{
+		"index"		"1150"
+		"classes"	"weapon_mac10;"
+	}
+	"Poly Mag"
+	{
+		"index"		"1149"
+		"classes"	"weapon_m4a1;"
+	}
+	"Downtown"
+	{
+		"index"		"1148"
+		"classes"	"weapon_m249;"
+	}
+	"Destroyer"
+	{
+		"index"		"1147"
+		"classes"	"weapon_galilar;"
+	}
+	"Meow 36"
+	{
+		"index"		"1146"
+		"classes"	"weapon_famas;"
+	}
+	"Crazy 8"
+	{
+		"index"		"1145"
+		"classes"	"weapon_revolver;"
+	}
+	"Chromatic Aberration"
+	{
+		"index"		"1144"
+		"classes"	"weapon_awp;"
+	}
+	"Ice Coaled"
+	{
+		"index"		"1143"
+		"classes"	"weapon_ak47;"
+	}
+	"Printstream"
+	{
+		"index"		"1142"
+		"classes"	"weapon_usp_silencer;"
+	}
 	"Spirit Board"
 	{
 		"index"		"1140"
@@ -750,7 +835,7 @@
 		"index"		"985"
 		"classes"	"weapon_m4a1;"
 	}
-	"字符輸出"
+	"Printstream"
 	{
 		"index"		"984"
 		"classes"	"weapon_m4a1_silencer;"
