--- a/addons/sourcemod/configs/weapons/weapons_ukrainian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_ukrainian.cfg
@@ -1,5 +1,90 @@
 "Skins"
 {
+	"Winterized"
+	{
+		"index"		"1158"
+		"classes"	"weapon_glock;"
+	}
+	"Roadblock"
+	{
+		"index"		"1157"
+		"classes"	"weapon_ump45;"
+	}
+	"Flora Carnivora"
+	{
+		"index"		"1156"
+		"classes"	"weapon_elite;"
+	}
+	"Kiss♥Love"
+	{
+		"index"		"1155"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Vent Rush"
+	{
+		"index"		"1154"
+		"classes"	"weapon_p90;"
+	}
+	"Visions"
+	{
+		"index"		"1153"
+		"classes"	"weapon_p250;"
+	}
+	"Drop Me"
+	{
+		"index"		"1152"
+		"classes"	"weapon_negev;"
+	}
+	"Dragon Tech"
+	{
+		"index"		"1151"
+		"classes"	"weapon_sg556;"
+	}
+	"Monkeyflage"
+	{
+		"index"		"1150"
+		"classes"	"weapon_mac10;"
+	}
+	"Poly Mag"
+	{
+		"index"		"1149"
+		"classes"	"weapon_m4a1;"
+	}
+	"Downtown"
+	{
+		"index"		"1148"
+		"classes"	"weapon_m249;"
+	}
+	"Destroyer"
+	{
+		"index"		"1147"
+		"classes"	"weapon_galilar;"
+	}
+	"Meow 36"
+	{
+		"index"		"1146"
+		"classes"	"weapon_famas;"
+	}
+	"Crazy 8"
+	{
+		"index"		"1145"
+		"classes"	"weapon_revolver;"
+	}
+	"Chromatic Aberration"
+	{
+		"index"		"1144"
+		"classes"	"weapon_awp;"
+	}
+	"Ice Coaled"
+	{
+		"index"		"1143"
+		"classes"	"weapon_ak47;"
+	}
+	"Printstream"
+	{
+		"index"		"1142"
+		"classes"	"weapon_usp_silencer;"
+	}
 	"Spirit Board"
 	{
 		"index"		"1140"
@@ -85,7 +170,7 @@
 		"index"		"1141"
 		"classes"	"weapon_ak47;"
 	}
-	"Watchdog"
+	"Сторож"
 	{
 		"index"		"1103"
 		"classes"	"weapon_xm1014;"
@@ -120,7 +205,7 @@
 		"index"		"1097"
 		"classes"	"weapon_m4a1;"
 	}
-	"Guerrilla"
+	"Партизанські"
 	{
 		"index"		"1096"
 		"classes"	"weapon_mp7;"
@@ -130,7 +215,7 @@
 		"index"		"1095"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Mount Fuji"
+	"Гора Фудзі"
 	{
 		"index"		"1094"
 		"classes"	"weapon_mp9;"
@@ -250,12 +335,12 @@
 		"index"		"1066"
 		"classes"	"weapon_famas;"
 	}
-	"Заміна оливи"
+	"Oil Change"
 	{
 		"index"		"1086"
 		"classes"	"weapon_elite;"
 	}
-	"Mechanism"
+	"Механізм"
 	{
 		"index"		"1085"
 		"classes"	"weapon_ump45;"
@@ -265,12 +350,12 @@
 		"index"		"1084"
 		"classes"	"weapon_sg556;"
 	}
-	"Breaker Box"
+	"Електрощит"
 	{
 		"index"		"1083"
 		"classes"	"weapon_bizon;"
 	}
-	"Fall Hazard"
+	"Загроза падіння"
 	{
 		"index"		"1082"
 		"classes"	"weapon_fiveseven;"
@@ -295,12 +380,12 @@
 		"index"		"1078"
 		"classes"	"weapon_xm1014;"
 	}
-	"Interlock"
+	"Переплетіння"
 	{
 		"index"		"1077"
 		"classes"	"weapon_nova;"
 	}
-	"Framework"
+	"Фреймворк"
 	{
 		"index"		"1076"
 		"classes"	"weapon_cz75a;"
@@ -315,7 +400,7 @@
 		"index"		"1074"
 		"classes"	"weapon_p90;"
 	}
-	"Imminent Danger"
+	"Неминуча небезпека"
 	{
 		"index"		"1073"
 		"classes"	"weapon_m4a1_silencer;"
@@ -330,7 +415,7 @@
 		"index"		"1071"
 		"classes"	"weapon_galilar;"
 	}
-	"Green Laminate"
+	"Зелений композит"
 	{
 		"index"		"1070"
 		"classes"	"weapon_ak47;"
@@ -405,12 +490,12 @@
 		"index"		"1056"
 		"classes"	"weapon_deagle;"
 	}
-	"Space Race"
+	"Космічні перегони"
 	{
 		"index"		"1055"
 		"classes"	"weapon_hkp2000;"
 	}
-	"Meltdown"
+	"Розплавлення"
 	{
 		"index"		"1053"
 		"classes"	"weapon_famas;"
@@ -750,7 +835,7 @@
 		"index"		"985"
 		"classes"	"weapon_m4a1;"
 	}
-	"Друкопис"
+	"Printstream"
 	{
 		"index"		"984"
 		"classes"	"weapon_m4a1_silencer;"
@@ -975,12 +1060,12 @@
 		"index"		"923"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Desert Blossom"
+	"Піщаний квіт"
 	{
 		"index"		"765"
 		"classes"	"weapon_sg556;"
 	}
-	"Fennec Fox"
+	"Фенек"
 	{
 		"index"		"764"
 		"classes"	"weapon_deagle;"
@@ -1020,7 +1105,7 @@
 		"index"		"823"
 		"classes"	"weapon_aug;"
 	}
-	"Navy Sheen"
+	"Морська сталь"
 	{
 		"index"		"822"
 		"classes"	"weapon_mag7;"
@@ -1030,7 +1115,7 @@
 		"index"		"821"
 		"classes"	"weapon_xm1014;"
 	}
-	"Music Box"
+	"Музична скринька"
 	{
 		"index"		"820"
 		"classes"	"weapon_mp9;"
@@ -1040,7 +1125,7 @@
 		"index"		"819"
 		"classes"	"weapon_awp;"
 	}
-	"Purple DDPAT"
+	"Пікс. камуфляж «Пурпуровий»"
 	{
 		"index"		"818"
 		"classes"	"weapon_usp_silencer;"
@@ -1050,7 +1135,7 @@
 		"index"		"1052"
 		"classes"	"weapon_ssg08;"
 	}
-	"Prey"
+	"Здобич"
 	{
 		"index"		"935"
 		"classes"	"weapon_mp7;weapon_ssg08;"
@@ -1060,27 +1145,27 @@
 		"index"		"934"
 		"classes"	"weapon_sg556;"
 	}
-	"Midnight Palm"
+	"Опівнічна пальма"
 	{
 		"index"		"933"
 		"classes"	"weapon_m249;weapon_cz75a;"
 	}
-	"Withered Vine"
+	"Зів’яла лоза"
 	{
 		"index"		"932"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Old Roots"
+	"Старе коріння"
 	{
 		"index"		"931"
 		"classes"	"weapon_mp9;"
 	}
-	"New Roots"
+	"Нове коріння"
 	{
 		"index"		"930"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Quick Sand"
+	"Швидкий пісок"
 	{
 		"index"		"929"
 		"classes"	"weapon_nova;"
@@ -1095,12 +1180,12 @@
 		"index"		"927"
 		"classes"	"weapon_aug;"
 	}
-	"Red DDPAT"
+	"Пікс. камуфляж «Червоний»"
 	{
 		"index"		"926"
 		"classes"	"weapon_m4a1;"
 	}
-	"Desert DDPAT"
+	"Пікс. камуфляж «Пустеля»"
 	{
 		"index"		"925"
 		"classes"	"weapon_p90;"
