updated translations for config files

--- a/addons/sourcemod/configs/weapons/weapons_brazilian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_brazilian.cfg
@@ -1,11 +1,11 @@
 "Skins"
 {
-	"Winterized"
+	"Invernizada"
 	{
 		"index"		"1158"
 		"classes"	"weapon_glock;"
 	}
-	"Roadblock"
+	"Blitz"
 	{
 		"index"		"1157"
 		"classes"	"weapon_ump45;"
@@ -15,72 +15,72 @@
 		"index"		"1156"
 		"classes"	"weapon_elite;"
 	}
-	"Kiss♥Love"
+	"BEIJ♥S"
 	{
 		"index"		"1155"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Vent Rush"
+	"Rush Duto"
 	{
 		"index"		"1154"
 		"classes"	"weapon_p90;"
 	}
-	"Visions"
+	"Visões"
 	{
 		"index"		"1153"
 		"classes"	"weapon_p250;"
 	}
-	"Drop Me"
+	"Me Solta"
 	{
 		"index"		"1152"
 		"classes"	"weapon_negev;"
 	}
-	"Dragon Tech"
+	"Tecnologia Dracônica"
 	{
 		"index"		"1151"
 		"classes"	"weapon_sg556;"
 	}
-	"Monkeyflage"
+	"Pri-mata"
 	{
 		"index"		"1150"
 		"classes"	"weapon_mac10;"
 	}
-	"Poly Mag"
+	"Polipente"
 	{
 		"index"		"1149"
 		"classes"	"weapon_m4a1;"
 	}
-	"Downtown"
+	"Centro da Cidade"
 	{
 		"index"		"1148"
 		"classes"	"weapon_m249;"
 	}
-	"Destroyer"
+	"Destruidora"
 	{
 		"index"		"1147"
 		"classes"	"weapon_galilar;"
 	}
-	"Meow 36"
+	"Miau 36"
 	{
 		"index"		"1146"
 		"classes"	"weapon_famas;"
 	}
-	"Crazy 8"
+	"Oitão"
 	{
 		"index"		"1145"
 		"classes"	"weapon_revolver;"
 	}
-	"Chromatic Aberration"
+	"Aberração Cromática"
 	{
 		"index"		"1144"
 		"classes"	"weapon_awp;"
 	}
-	"Ice Coaled"
+	"Gelo Compacto"
 	{
 		"index"		"1143"
 		"classes"	"weapon_ak47;"
 	}
-	"Printstream"
+	"Cadeia de Caracteres"
 	{
 		"index"		"1142"
 		"classes"	"weapon_usp_silencer;"
@@ -835,7 +835,7 @@
 		"index"		"985"
 		"classes"	"weapon_m4a1;"
 	}
-	"Printstream"
+	"Cadeia de Caracteres"
 	{
 		"index"		"984"
 		"classes"	"weapon_m4a1_silencer;"
@@ -945,7 +945,7 @@
 		"index"		"963"
 		"classes"	"weapon_glock;"
 	}
-	"Printstream"
+	"Cadeia de Caracteres"
 	{
 		"index"		"962"
 		"classes"	"weapon_deagle;"
