--- a/addons/sourcemod/configs/weapons/weapons_german.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_german.cfg
@@ -1,11 +1,11 @@
 "Skins"
 {
-	"Winterized"
+	"Winterfest"
 	{
 		"index"		"1158"
 		"classes"	"weapon_glock;"
 	}
-	"Roadblock"
+	"Straßensperre"
 	{
 		"index"		"1157"
 		"classes"	"weapon_ump45;"
@@ -15,7 +15,7 @@
 		"index"		"1156"
 		"classes"	"weapon_elite;"
 	}
-	"Kiss♥Love"
+	"Kuss♥Liebe"
 	{
 		"index"		"1155"
 		"classes"	"weapon_sawedoff;"
@@ -25,57 +25,57 @@
 		"index"		"1154"
 		"classes"	"weapon_p90;"
 	}
-	"Visions"
+	"Visionen"
 	{
 		"index"		"1153"
 		"classes"	"weapon_p250;"
 	}
-	"Drop Me"
+	"Lass-mich-fallen"
 	{
 		"index"		"1152"
 		"classes"	"weapon_negev;"
 	}
-	"Dragon Tech"
+	"Drachentechnologie"
 	{
 		"index"		"1151"
 		"classes"	"weapon_sg556;"
 	}
-	"Monkeyflage"
+	"Affentarnung"
 	{
 		"index"		"1150"
 		"classes"	"weapon_mac10;"
 	}
-	"Poly Mag"
+	"Plastikmagazin"
 	{
 		"index"		"1149"
 		"classes"	"weapon_m4a1;"
 	}
-	"Downtown"
+	"Innenstadt"
 	{
 		"index"		"1148"
 		"classes"	"weapon_m249;"
 	}
-	"Destroyer"
+	"Zerstörer"
 	{
 		"index"		"1147"
 		"classes"	"weapon_galilar;"
 	}
-	"Meow 36"
+	"Miau 36"
 	{
 		"index"		"1146"
 		"classes"	"weapon_famas;"
 	}
-	"Crazy 8"
+	"Verrückte 8"
 	{
 		"index"		"1145"
 		"classes"	"weapon_revolver;"
 	}
-	"Chromatic Aberration"
+	"Chromatische Aberration"
 	{
 		"index"		"1144"
 		"classes"	"weapon_awp;"
 	}
-	"Ice Coaled"
+	"Eisgekohlt"
 	{
 		"index"		"1143"
 		"classes"	"weapon_ak47;"
