--- a/addons/sourcemod/configs/weapons/weapons_hungarian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_hungarian.cfg
@@ -1,11 +1,11 @@
 "Skins"
 {
-	"Winterized"
+	"Téliesített"
 	{
 		"index"		"1158"
 		"classes"	"weapon_glock;"
 	}
-	"Roadblock"
+	"Úttorlasz"
 	{
 		"index"		"1157"
 		"classes"	"weapon_ump45;"
@@ -15,72 +15,72 @@
 		"index"		"1156"
 		"classes"	"weapon_elite;"
 	}
-	"Kiss♥Love"
+	"Puszi♥Szeretlek"
 	{
 		"index"		"1155"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Vent Rush"
+	"Dühroham"
 	{
 		"index"		"1154"
 		"classes"	"weapon_p90;"
 	}
-	"Visions"
+	"Látomások"
 	{
 		"index"		"1153"
 		"classes"	"weapon_p250;"
 	}
-	"Drop Me"
+	"Szedj Le"
 	{
 		"index"		"1152"
 		"classes"	"weapon_negev;"
 	}
-	"Dragon Tech"
+	"Sárkánytech"
 	{
 		"index"		"1151"
 		"classes"	"weapon_sg556;"
 	}
-	"Monkeyflage"
+	"Majomparádé"
 	{
 		"index"		"1150"
 		"classes"	"weapon_mac10;"
 	}
-	"Poly Mag"
+	"Műanyag Tár"
 	{
 		"index"		"1149"
 		"classes"	"weapon_m4a1;"
 	}
-	"Downtown"
+	"Belváros"
 	{
 		"index"		"1148"
 		"classes"	"weapon_m249;"
 	}
-	"Destroyer"
+	"Pusztító"
 	{
 		"index"		"1147"
 		"classes"	"weapon_galilar;"
 	}
-	"Meow 36"
+	"Miau 36"
 	{
 		"index"		"1146"
 		"classes"	"weapon_famas;"
 	}
-	"Crazy 8"
+	"Bolond 8"
 	{
 		"index"		"1145"
 		"classes"	"weapon_revolver;"
 	}
-	"Chromatic Aberration"
+	"Kromatikus Aberráció"
 	{
 		"index"		"1144"
 		"classes"	"weapon_awp;"
 	}
-	"Ice Coaled"
+	"Beállt Jég"
 	{
 		"index"		"1143"
 		"classes"	"weapon_ak47;"
 	}
-	"Printstream"
+	"Nyomdafolyam"
 	{
 		"index"		"1142"
 		"classes"	"weapon_usp_silencer;"
@@ -835,7 +835,7 @@
 		"index"		"985"
 		"classes"	"weapon_m4a1;"
 	}
-	"Printstream"
+	"Nyomdafolyam"
 	{
 		"index"		"984"
 		"classes"	"weapon_m4a1_silencer;"
@@ -945,7 +945,7 @@
 		"index"		"963"
 		"classes"	"weapon_glock;"
 	}
-	"Printstream"
+	"Nyomdafolyam"
 	{
 		"index"		"962"
 		"classes"	"weapon_deagle;"
