--- a/addons/sourcemod/configs/weapons/weapons_turkish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_turkish.cfg
@@ -70,7 +70,7 @@
 		"index"		"1145"
 		"classes"	"weapon_revolver;"
 	}
-	"Chromatic Aberration"
+	"Renk Sapmaları"
 	{
 		"index"		"1144"
 		"classes"	"weapon_awp;"
