--- a/addons/sourcemod/configs/weapons/weapons_bulgarian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_bulgarian.cfg
@@ -1,86 +1,86 @@
 "Skins"
 {
-	"Winterized"
+	"Зазимено"
 	{
 		"index"		"1158"
 		"classes"	"weapon_glock;"
 	}
-	"Roadblock"
+	"Пътна блокада"
 	{
 		"index"		"1157"
 		"classes"	"weapon_ump45;"
 	}
-	"Flora Carnivora"
+	"Месоядна флора"
 	{
 		"index"		"1156"
 		"classes"	"weapon_elite;"
 	}
-	"Kiss♥Love"
+	"Целувка♥Обич"
 	{
 		"index"		"1155"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Vent Rush"
+	"Вентилационен щурм"
 	{
 		"index"		"1154"
 		"classes"	"weapon_p90;"
 	}
-	"Visions"
+	"Видения"
 	{
 		"index"		"1153"
 		"classes"	"weapon_p250;"
 	}
-	"Drop Me"
+	"Строполи ме"
 	{
 		"index"		"1152"
 		"classes"	"weapon_negev;"
 	}
-	"Dragon Tech"
+	"Драконова технология"
 	{
 		"index"		"1151"
 		"classes"	"weapon_sg556;"
 	}
-	"Monkeyflage"
+	"Маймунски камуфлаж"
 	{
 		"index"		"1150"
 		"classes"	"weapon_mac10;"
 	}
-	"Poly Mag"
+	"Полимерен пълнител"
 	{
 		"index"		"1149"
 		"classes"	"weapon_m4a1;"
 	}
-	"Downtown"
+	"В центъра на града"
 	{
 		"index"		"1148"
 		"classes"	"weapon_m249;"
 	}
-	"Destroyer"
+	"Унищожител"
 	{
 		"index"		"1147"
 		"classes"	"weapon_galilar;"
 	}
-	"Meow 36"
+	"Мяу 36"
 	{
 		"index"		"1146"
 		"classes"	"weapon_famas;"
 	}
-	"Crazy 8"
+	"Лудата осморка"
 	{
 		"index"		"1145"
 		"classes"	"weapon_revolver;"
 	}
-	"Chromatic Aberration"
+	"Хроматична аберация"
 	{
 		"index"		"1144"
 		"classes"	"weapon_awp;"
 	}
-	"Ice Coaled"
+	"Ледникови въглища"
 	{
 		"index"		"1143"
 		"classes"	"weapon_ak47;"
 	}
-	"Printstream"
+	"Печатен поток"
 	{
 		"index"		"1142"
 		"classes"	"weapon_usp_silencer;"
@@ -835,7 +835,7 @@
 		"index"		"985"
 		"classes"	"weapon_m4a1;"
 	}
-	"Printstream"
+	"Печатен поток"
 	{
 		"index"		"984"
 		"classes"	"weapon_m4a1_silencer;"
@@ -945,7 +945,7 @@
 		"index"		"963"
 		"classes"	"weapon_glock;"
 	}
-	"Printstream"
+	"Печатен поток"
 	{
 		"index"		"962"
 		"classes"	"weapon_deagle;"
@@ -4790,7 +4790,7 @@
 		"index"		"154"
 		"classes"	"weapon_famas;"
 	}
-	"Унищожително"
+	"Разрушително"
 	{
 		"index"		"153"
 		"classes"	"weapon_elite;"
