--- a/addons/sourcemod/configs/weapons/weapons_russian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_russian.cfg
@@ -1,86 +1,86 @@
 "Skins"
 {
-	"Winterized"
+	"Зимний вариант"
 	{
 		"index"		"1158"
 		"classes"	"weapon_glock;"
 	}
-	"Roadblock"
+	"Блокпост"
 	{
 		"index"		"1157"
 		"classes"	"weapon_ump45;"
 	}
-	"Flora Carnivora"
+	"Хищные растения"
 	{
 		"index"		"1156"
 		"classes"	"weapon_elite;"
 	}
-	"Kiss♥Love"
+	"Лафки♥Чмафки"
 	{
 		"index"		"1155"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Vent Rush"
+	"Прорыв в вентиляцию"
 	{
 		"index"		"1154"
 		"classes"	"weapon_p90;"
 	}
-	"Visions"
+	"Видения"
 	{
 		"index"		"1153"
 		"classes"	"weapon_p250;"
 	}
-	"Drop Me"
+	"Отвали"
 	{
 		"index"		"1152"
 		"classes"	"weapon_negev;"
 	}
-	"Dragon Tech"
+	"Техника дракона"
 	{
 		"index"		"1151"
 		"classes"	"weapon_sg556;"
 	}
-	"Monkeyflage"
+	"Обезьяний камуфляж"
 	{
 		"index"		"1150"
 		"classes"	"weapon_mac10;"
 	}
-	"Poly Mag"
+	"Полимерный рожок"
 	{
 		"index"		"1149"
 		"classes"	"weapon_m4a1;"
 	}
-	"Downtown"
+	"Деловой центр"
 	{
 		"index"		"1148"
 		"classes"	"weapon_m249;"
 	}
-	"Destroyer"
+	"Уничтожитель"
 	{
 		"index"		"1147"
 		"classes"	"weapon_galilar;"
 	}
-	"Meow 36"
+	"Мяу 36"
 	{
 		"index"		"1146"
 		"classes"	"weapon_famas;"
 	}
-	"Crazy 8"
+	"Безумная восьмёрка"
 	{
 		"index"		"1145"
 		"classes"	"weapon_revolver;"
 	}
-	"Chromatic Aberration"
+	"Хроматическая аберрация"
 	{
 		"index"		"1144"
 		"classes"	"weapon_awp;"
 	}
-	"Ice Coaled"
+	"Ледяной уголь"
 	{
 		"index"		"1143"
 		"classes"	"weapon_ak47;"
 	}
-	"Printstream"
+	"Поток информации"
 	{
 		"index"		"1142"
 		"classes"	"weapon_usp_silencer;"
@@ -835,7 +835,7 @@
 		"index"		"985"
 		"classes"	"weapon_m4a1;"
 	}
-	"Printstream"
+	"Поток информации"
 	{
 		"index"		"984"
 		"classes"	"weapon_m4a1_silencer;"
@@ -945,7 +945,7 @@
 		"index"		"963"
 		"classes"	"weapon_glock;"
 	}
-	"Printstream"
+	"Поток информации"
 	{
 		"index"		"962"
 		"classes"	"weapon_deagle;"
