--- a/addons/sourcemod/configs/weapons/weapons_spanish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_spanish.cfg
@@ -1,56 +1,56 @@
 "Skins"
 {
-	"Winterized"
+	"Invernal"
 	{
 		"index"		"1158"
 		"classes"	"weapon_glock;"
 	}
-	"Roadblock"
+	"Barricada"
 	{
 		"index"		"1157"
 		"classes"	"weapon_ump45;"
 	}
-	"Flora Carnivora"
+	"Flora carnívora"
 	{
 		"index"		"1156"
 		"classes"	"weapon_elite;"
 	}
-	"Kiss♥Love"
+	"Beso♥Amor"
 	{
 		"index"		"1155"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Vent Rush"
+	"Gas a fondo"
 	{
 		"index"		"1154"
 		"classes"	"weapon_p90;"
 	}
-	"Visions"
+	"Visiones"
 	{
 		"index"		"1153"
 		"classes"	"weapon_p250;"
 	}
-	"Drop Me"
+	"Déjame"
 	{
 		"index"		"1152"
 		"classes"	"weapon_negev;"
 	}
-	"Dragon Tech"
+	"Ciberdragón"
 	{
 		"index"		"1151"
 		"classes"	"weapon_sg556;"
 	}
-	"Monkeyflage"
+	"Bandera macaca"
 	{
 		"index"		"1150"
 		"classes"	"weapon_mac10;"
 	}
-	"Poly Mag"
+	"Polímero"
 	{
 		"index"		"1149"
 		"classes"	"weapon_m4a1;"
 	}
-	"Downtown"
+	"Centro urbano"
 	{
 		"index"		"1148"
 		"classes"	"weapon_m249;"
@@ -60,27 +60,27 @@
 		"index"		"1147"
 		"classes"	"weapon_galilar;"
 	}
-	"Meow 36"
+	"Miau 36"
 	{
 		"index"		"1146"
 		"classes"	"weapon_famas;"
 	}
-	"Crazy 8"
+	"8 loco"
 	{
 		"index"		"1145"
 		"classes"	"weapon_revolver;"
 	}
-	"Chromatic Aberration"
+	"Aberración cromática"
 	{
 		"index"		"1144"
 		"classes"	"weapon_awp;"
 	}
-	"Ice Coaled"
+	"Hielo carbonizado"
 	{
 		"index"		"1143"
 		"classes"	"weapon_ak47;"
 	}
-	"Printstream"
+	"PrintStream"
 	{
 		"index"		"1142"
 		"classes"	"weapon_usp_silencer;"
@@ -835,7 +835,7 @@
 		"index"		"985"
 		"classes"	"weapon_m4a1;"
 	}
-	"Printstream"
+	"PrintStream"
 	{
 		"index"		"984"
 		"classes"	"weapon_m4a1_silencer;"
@@ -945,7 +945,7 @@
 		"index"		"963"
 		"classes"	"weapon_glock;"
 	}
-	"Printstream"
+	"PrintStream"
 	{
 		"index"		"962"
 		"classes"	"weapon_deagle;"
