added missing translations for revolution case

--- a/addons/sourcemod/configs/weapons/weapons_ukrainian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_ukrainian.cfg
@@ -1,5 +1,90 @@
 "Skins"
 {
+	"Wild Child"
+	{
+		"index"		"1236"
+		"classes"	"weapon_ump45;"
+	}
+	"Rebel"
+	{
+		"index"		"1235"
+		"classes"	"weapon_tec9;"
+	}
+	"Cyberforce"
+	{
+		"index"		"1234"
+		"classes"	"weapon_sg556;"
+	}
+	"Neoqueen"
+	{
+		"index"		"1233"
+		"classes"	"weapon_p90;"
+	}
+	"Banana Cannon"
+	{
+		"index"		"1232"
+		"classes"	"weapon_revolver;"
+	}
+	"Liquidation"
+	{
+		"index"		"1231"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Re.built"
+	{
+		"index"		"1230"
+		"classes"	"weapon_p250;"
+	}
+	"Sakkaku"
+	{
+		"index"		"1229"
+		"classes"	"weapon_mac10;"
+	}
+	"Temukau"
+	{
+		"index"		"1228"
+		"classes"	"weapon_m4a1;"
+	}
+	"Umbral Rabbit"
+	{
+		"index"		"1227"
+		"classes"	"weapon_glock;"
+	}
+	"Fragments"
+	{
+		"index"		"1226"
+		"classes"	"weapon_scar20;"
+	}
+	"Featherweight"
+	{
+		"index"		"1225"
+		"classes"	"weapon_mp9;"
+	}
+	"Wicked Sick"
+	{
+		"index"		"1224"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Emphorosaur-S"
+	{
+		"index"		"1223"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Doodle Lore"
+	{
+		"index"		"1222"
+		"classes"	"weapon_awp;"
+	}
+	"Head Shot"
+	{
+		"index"		"1221"
+		"classes"	"weapon_ak47;"
+	}
+	"Insomnia"
+	{
+		"index"		"1220"
+		"classes"	"weapon_mag7;"
+	}
 	"Готовий до зими"
 	{
 		"index"		"1158"
@@ -85,87 +170,87 @@
 		"index"		"1142"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Spirit Board"
+	"Спіритична дошка"
 	{
 		"index"		"1140"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Poultrygeist"
+	"Курчегейст"
 	{
 		"index"		"1139"
 		"classes"	"weapon_scar20;"
 	}
-	"Lifted Spirits"
+	"Піднесені душі"
 	{
 		"index"		"1138"
 		"classes"	"weapon_hkp2000;"
 	}
-	"Necro Jr."
+	"Некро-молодший"
 	{
 		"index"		"1137"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Ticket to Hell"
+	"Квиток до пекла"
 	{
 		"index"		"1136"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Zombie Offensive"
+	"Наступ зомбі"
 	{
 		"index"		"1135"
 		"classes"	"weapon_xm1014;"
 	}
-	"Starlight Protector"
+	"Захисник зоряного світла"
 	{
 		"index"		"1134"
 		"classes"	"weapon_mp9;"
 	}
-	"Abyssal Apparition"
+	"Пекельна з’ява"
 	{
 		"index"		"1133"
 		"classes"	"weapon_mp7;"
 	}
-	"Foresight"
+	"Передбачення"
 	{
 		"index"		"1132"
 		"classes"	"weapon_mag7;"
 	}
-	"Ensnared"
+	"Ув’язнення"
 	{
 		"index"		"1131"
 		"classes"	"weapon_mac10;"
 	}
-	"Night Terror"
+	"Нічний жах"
 	{
 		"index"		"1130"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Dream Glade"
+	"Поляна снів"
 	{
 		"index"		"1129"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Scrawl"
+	"Каракулі"
 	{
 		"index"		"1128"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Rapid Eye Movement"
+	"Швидкі рухи очей"
 	{
 		"index"		"1127"
 		"classes"	"weapon_famas;"
 	}
-	"Melondrama"
+	"Плід уяви"
 	{
 		"index"		"1126"
 		"classes"	"weapon_elite;"
 	}
-	"Space Cat"
+	"Космічний кіт"
 	{
 		"index"		"1125"
 		"classes"	"weapon_bizon;"
 	}
-	"Nightwish"
+	"Побажання на ніч"
 	{
 		"index"		"1141"
 		"classes"	"weapon_ak47;"
@@ -175,42 +260,42 @@
 		"index"		"1103"
 		"classes"	"weapon_xm1014;"
 	}
-	"Black Lotus"
+	"Чорний лотос"
 	{
 		"index"		"1102"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Turbo Peek"
+	"Турборежим"
 	{
 		"index"		"1101"
 		"classes"	"weapon_ssg08;"
 	}
-	"Snack Attack"
+	"Атака смаколиків"
 	{
 		"index"		"1100"
 		"classes"	"weapon_glock;"
 	}
-	"Lumen"
+	"Люмен"
 	{
 		"index"		"1099"
 		"classes"	"weapon_bizon;"
 	}
-	"Toybox"
+	"Коробка з іграшками"
 	{
 		"index"		"1098"
 		"classes"	"weapon_mac10;"
 	}
-	"Spider Lily"
+	"Павуча лілея"
 	{
 		"index"		"1097"
 		"classes"	"weapon_m4a1;"
 	}
-	"Партизанські"
+	"Партизани"
 	{
 		"index"		"1096"
 		"classes"	"weapon_mp7;"
 	}
-	"Keeping Tabs"
+	"Нагляд"
 	{
 		"index"		"1095"
 		"classes"	"weapon_g3sg1;"
@@ -220,27 +305,27 @@
 		"index"		"1094"
 		"classes"	"weapon_mp9;"
 	}
-	"Boost Protocol"
+	"Протокол посилення"
 	{
 		"index"		"1093"
 		"classes"	"weapon_fiveseven;"
 	}
-	"ZX Spectron"
+	"Зет-Ікс Спектрон"
 	{
 		"index"		"1092"
 		"classes"	"weapon_famas;"
 	}
-	"Tread"
+	"Слід"
 	{
 		"index"		"1091"
 		"classes"	"weapon_elite;"
 	}
-	"Ocean Drive"
+	"Океанське узбережжя"
 	{
 		"index"		"1090"
 		"classes"	"weapon_deagle;"
 	}
-	"BI83 Spectrum"
+	"Спектральний вісмут 83"
 	{
 		"index"		"1089"
 		"classes"	"weapon_mag7;"
@@ -250,7 +335,7 @@
 		"index"		"1088"
 		"classes"	"weapon_aug;"
 	}
-	"Leet Museo"
+	"Елітний музей"
 	{
 		"index"		"1087"
 		"classes"	"weapon_ak47;"
@@ -330,12 +415,12 @@
 		"index"		"1104"
 		"classes"	"weapon_knife_survival_bowie;"
 	}
-	"Faulty Wiring"
+	"Несправне підключення"
 	{
 		"index"		"1066"
 		"classes"	"weapon_famas;"
 	}
-	"Oil Change"
+	"Заміна мастила"
 	{
 		"index"		"1086"
 		"classes"	"weapon_elite;"
@@ -345,7 +430,7 @@
 		"index"		"1085"
 		"classes"	"weapon_ump45;"
 	}
-	"Hazard Pay"
+	"Ціна за небезпеку"
 	{
 		"index"		"1084"
 		"classes"	"weapon_sg556;"
@@ -360,12 +445,12 @@
 		"index"		"1082"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Digital Architect"
+	"Цифровий архітектор"
 	{
 		"index"		"1081"
 		"classes"	"weapon_p250;"
 	}
-	"Infrastructure"
+	"Інфраструктура"
 	{
 		"index"		"1080"
 		"classes"	"weapon_negev;"
@@ -375,7 +460,7 @@
 		"index"		"1079"
 		"classes"	"weapon_glock;"
 	}
-	"Blue Tire"
+	"Синя шина"
 	{
 		"index"		"1078"
 		"classes"	"weapon_xm1014;"
@@ -390,7 +475,7 @@
 		"index"		"1076"
 		"classes"	"weapon_cz75a;"
 	}
-	"Strats"
+	"Стратегія"
 	{
 		"index"		"1075"
 		"classes"	"weapon_mac10;"
@@ -405,7 +490,7 @@
 		"index"		"1073"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Prism Terrace"
+	"Призматичні сходи"
 	{
 		"index"		"1072"
 		"classes"	"weapon_mag7;"
@@ -455,7 +540,7 @@
 		"index"		"1065"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Syndicate"
+	"Синдикат"
 	{
 		"index"		"1064"
 		"classes"	"weapon_cz75a;"
@@ -465,22 +550,22 @@
 		"index"		"1063"
 		"classes"	"weapon_m4a1;"
 	}
-	"Autumn Twilly"
+	"Осінній фасон"
 	{
 		"index"		"1061"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Spring Twilly"
+	"Весняний фасон"
 	{
 		"index"		"1060"
 		"classes"	"weapon_ssg08;"
 	}
-	"Fizzy POP"
+	"ПОП-Шипучка"
 	{
 		"index"		"1059"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"POP AWP"
+	"ПОП-AWP"
 	{
 		"index"		"1058"
 		"classes"	"weapon_awp;"
@@ -1055,7 +1140,7 @@
 		"index"		"941"
 		"classes"	"weapon_ak47;"
 	}
-	"Oxide Oasis"
+	"Окиснена оаза"
 	{
 		"index"		"923"
 		"classes"	"weapon_mp5sd;"
@@ -1070,22 +1155,22 @@
 		"index"		"764"
 		"classes"	"weapon_deagle;"
 	}
-	"Anolis"
+	"Аноліс"
 	{
 		"index"		"829"
 		"classes"	"weapon_bizon;"
 	}
-	"Verdant Growth"
+	"Зелені насадження"
 	{
 		"index"		"828"
 		"classes"	"weapon_p90;"
 	}
-	"Humidor"
+	"Зволоження"
 	{
 		"index"		"827"
 		"classes"	"weapon_m249;"
 	}
-	"Sienna Damask"
+	"Сієновий дамаст"
 	{
 		"index"		"826"
 		"classes"	"weapon_mac10;"
@@ -1095,7 +1180,7 @@
 		"index"		"825"
 		"classes"	"weapon_p250;"
 	}
-	"Drift Wood"
+	"Корч"
 	{
 		"index"		"824"
 		"classes"	"weapon_elite;"
@@ -1110,7 +1195,7 @@
 		"index"		"822"
 		"classes"	"weapon_mag7;"
 	}
-	"Elegant Vines"
+	"Елегантні лози"
 	{
 		"index"		"821"
 		"classes"	"weapon_xm1014;"
@@ -1140,7 +1225,7 @@
 		"index"		"935"
 		"classes"	"weapon_mp7;weapon_ssg08;"
 	}
-	"Bleached"
+	"Відбілений"
 	{
 		"index"		"934"
 		"classes"	"weapon_sg556;"
@@ -1170,12 +1255,12 @@
 		"index"		"929"
 		"classes"	"weapon_nova;"
 	}
-	"Black & Tan"
+	"Чорний і світлокоричневий"
 	{
 		"index"		"928"
 		"classes"	"weapon_p250;"
 	}
-	"Spalted Wood"
+	"Мертве дерево"
 	{
 		"index"		"927"
 		"classes"	"weapon_aug;"
@@ -1195,17 +1280,17 @@
 		"index"		"924"
 		"classes"	"weapon_revolver;"
 	}
-	"Orange Anolis"
+	"Помаранчевий аноліс"
 	{
 		"index"		"922"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Gold Arabesque"
+	"Золота арабеска"
 	{
 		"index"		"921"
 		"classes"	"weapon_ak47;"
 	}
-	"Parched"
+	"Пересохлий"
 	{
 		"index"		"880"
 		"classes"	"weapon_sawedoff;"
